--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
-
-wassap man
-
-but to be better man
+<html>
+  <head>
+    <title>The Tempoletion</title>
+  </head>
+  <body>
+    hello man
+  
+  </body>
+</html>
