--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <title>The Tempoletion</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="./favicon.jpg" title="myIcon" type="image/jpg">	
   </head>
   <body>
-    hello man
-  
+    <canvas id="background" class="background"></canvas>
+    <h1 id="header" class="header">tempoletion</h1>
+
+    <script src="script.js"></script>
   </body>
 </html>
