--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="icon" href="./favicon.jpg" title="myIcon" type="image/jpg">	
   </head>
   <body>
+    <div id="header"></div>
     <canvas id="background" class="background"></canvas>
     <h1 id="header" class="header">tempoletion</h1>
-
+    <p>this is my website,I will update it more soon</p>
+    <footer>
+      <p>here is my social media</p>
+      <p>uhhbbh</p>
+      <p><a id="facebook"></a></p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
