--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="header"></div>
     <canvas id="background" class="background"></canvas>
     <h1 id="header" class="header">tempoletion</h1>
+    <p id="slang">a man</p>
     <p>this is my website,I will update it more soon</p>
     <footer>
       <p>here is my social media</p>
